--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             </div>
         </header>
         <div class="mdl-layout mdl-js-layout">
+            <h4 class="login-greet">Welcome back</h4>
+            <p class="login-msg">Tell us a little bit more about yourself</p>
             <div class="login-container">
                 <div class="login-form">
                     <div class="flex-container">
