fix: header responsive add

--- a/index.html
+++ b/index.html
@@ -72,14 +72,20 @@
                 <div class="login-form">
                     <div class="flex-container">
                         <div class="login-form-title">
-                            <label>Sign in</label>
-                            <span>to continue to <span th:text="${domain.name}"></span></span>
-                        </div>
-                        <div>
+                            <div>
+                                <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M3.328 6.99999L8.278 11.95L6.864 13.364L0.5 6.99999L6.864 0.635986L8.278 2.04999L3.328 6.99999Z"
+                                        fill="#27303E" />
+                                </svg>
+                                <label class="login-step">Step 1</label>
+                            </div>
+                            <span>Hello, tell us a little about yourself<span th:text="${domain.name}"></span></span>
+                            </div>
+                            <!-- <div>
                             <img class="originImage" width="150"
                                 src="https://storage.googleapis.com/oml-console-app-bucket/originml-logo-default.svg"
                                 alt="OriginML" />
-                        </div>
+                        </div> -->
                     </div>
                     <form id="form" role="form" th:action="${action}" method="post">
                         <div class="login-form-content">
