fix(update): form input style

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                     <form id="form" role="form" th:action="${action}" method="post">
                         <div class="login-form-content">
                             <div class="input-textfield">
-                                <label for="username">Email</label>
-                                <input type="text" id="username" name="username" autofocus="autofocus" required />
+                                <!-- <label for="username">Email</label> -->
+                                <input placeholder="Email" type="text" id="username" name="username" autofocus="autofocus" required />
                             </div>
                             <div class="input-textfield">
-                                <label for="password">Password</label>
-                                <input type="password" id="password" name="password" autocomplete="current-password"
+                                <!-- <label for="password">Password</label> -->
+                                <input placeholder="Password" type="password" id="password" name="password" autocomplete="current-password"
                                     style="width: 89%; padding-left: 30px" required />
                                 <img src="https://storage.googleapis.com/oml-console-app-bucket/eye-solid.svg"
                                     alt="eye-show" width="16" height="16" id="showPass"
